@@ -3,6 +3,8 @@
 
 \section c018 version 0.17 -> 0.17+
 
+ - Avoid 'Xlib: unexpected async reply' errors on Linux/Unix/BSD's
+   by adding some thread interlocking. (20-feb-2008, David Leonard)
  - GNU compiler support on Windows. (20-feb-2008, Alex)
  - HCI register space for UISB added. (18-feb-2008, Brian Wheeler)
  - Added vital product data page 0 (Required for Tru64).
